--- a/GoogleService-Info.plist
+++ b/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>926875753114-nd8uc4r2i9em8qq0muvpluub8gftudtk.apps.googleusercontent.com</string>
+	<string>516864946729-k02mt9f7bar6mamace93k8tq22b4lbbo.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.926875753114-nd8uc4r2i9em8qq0muvpluub8gftudtk</string>
+	<string>com.googleusercontent.apps.516864946729-k02mt9f7bar6mamace93k8tq22b4lbbo</string>
 	<key>API_KEY</key>
-	<string>AIzaSyBBlzzDXupykIYaBfeXXdrv52rPLOV8RtE</string>
+	<string>AIzaSyDpM86QUQHt1c3zXSFsrrO_8ZWIJdWmXO0</string>
 	<key>GCM_SENDER_ID</key>
-	<string>926875753114</string>
+	<string>516864946729</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>host.exp.exponent</string>
 	<key>PROJECT_ID</key>
-	<string>native-tinder-ios</string>
+	<string>native-tinder-ss</string>
 	<key>STORAGE_BUCKET</key>
-	<string>native-tinder-ios.appspot.com</string>
+	<string>native-tinder-ss.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,6 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:926875753114:ios:7c08a3596112f4c6891d23</string>
+	<string>1:516864946729:ios:ef379987d069917f7c6238</string>
 </dict>
 </plist>
